# evalchemy

./: README.md  api_test.py  reasoning_csv.sh  requirements.txt  score.sh  try_eval.sh
database/: utils.py
docs/: curator_guide_ko.md  evaluation-system-guide.md  try_eval.sh
eval/: eval.py  eval_tracker.py  task.py
eval/chat_benchmarks/: curator_lm.py  precomputed_hf_lm.py
eval/chat_benchmarks/AIME24/: eval_instruct.py
eval/chat_benchmarks/AIME25/: eval_instruct.py
eval/chat_benchmarks/AIW/: eval_instruct.py
eval/chat_benchmarks/AMC23/: eval_instruct.py
eval/chat_benchmarks/BigCodeBench/: eval_instruct.py  execution.py
eval/chat_benchmarks/CodeElo/: codeelo_utils.py  eval_instruct.py
eval/chat_benchmarks/CodeForces/: codeforces_utils.py  eval_instruct.py
eval/chat_benchmarks/CruxEval/: eval_instruct.py  (+2 more)
eval/chat_benchmarks/HMMT/matharena/: .gitignore  README.md  README_judges.md  __init__.py  api.py  configs.py  cot_solver.py  grader.py  parse_manual.py  parser.py  possible_issues.py  pyproject.toml  runner.py  utils.py
eval/distributed/: SETUP_CAPELLA.md  SETUP_JURECA.md  benchmark_plot.py  launch.py  launch_local.py  launch_simple.py  process_shard.py  process_shards_capella.sbatch  process_shards_capella_tp.sbatch  process_shards_jureca.sbatch  process_shards_local.sh  process_shards_local_tp.sh  process_shards_tacc.sbatch  process_shards_tacc_tp.sbatch  run_evaluations_capella.sbatch  run_evaluations_tacc.sbatch  simple_alpha.sbatch  simple_claix.sbatch  simple_jureca.sbatch  simple_leonardo.sbatch  simple_tacc.sbatch  simple_zih.sbatch
(+76 files in other folders)
