[project]
name = "matharena"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mislav Balunovic", email = "mislav.balunovic@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.49.0",
    "beautifulsoup4>=4.13.1",
    "google-genai>=1.11.0",
    "loguru>=0.7.3",
    "openai>=1.67.0",
    "python-fasthtml>=0.12.1",
    "regex>=2024.11.6",
    "requests>=2.32.3",
    "together>=1.3.14",
    "antlr4-python3-runtime==4.11",
    "sympy >=1.13.1",
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
    "matplotlib>=3.9.3",
    "json5>=0.10.0",
    "datasets >= 3.5.0"
    # "vllm >= 0.7.1"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = ["website"]
